--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tw": "tailwind -i ./resources/input.css -o ./resources/output.css"
+    "tw": "tailwind -i resources/css/input.css -o public/build/output.css"
   },
 
   "devDependencies": {
